fix(layer-hover): fix alignment in icons

--- a/src/app/components/layer-hover/layer-hover.component.scss
+++ b/src/app/components/layer-hover/layer-hover.component.scss
@@ -36,6 +36,9 @@
             &:hover {
                 opacity: .8;
             }
+            svg-icon {
+                vertical-align: middle;
+            }
         }
     }
 }
